# SDLconway

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: base.h  grid.h  rule.h
src/: grid.c  main.c  rule.c
